--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="nav">
-        <img src="./img/images.png" alt="Logo PokeDex">
+        <img src="./img/logo.png" alt="Logo PokeDex">
         <ul class="nav-list">
             <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li>
             <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
